add react component

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
     <title>Donut Chart: Rounded-Corner</title>
   </head>
   <body>
-    <div id="chart"></div>
+    <div id="root"></div>
   </body>
 </html>
